--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -1257,7 +1257,7 @@
                     addNotification('<i class="fa fa-minus-circle"></i><span>Oh SNAP! This is an error message: Run!</span>', 'danger');
                 });
                 $('#show_black').on('click',function(){
-                    addNotification('<span>This is a black alert</span>', 'black');
+                    addNotification('<span>This is a black alert</span>', 'black', 'bottom-left');
                 });
 
                 $('#confirmation_alert').on('click', function () {
