Feature(Layout): Added page to UI KIT with helper classes

--- a/demo/helper_classes.html
+++ b/demo/helper_classes.html
@@ -457,7 +457,7 @@
                         <div class="jumbotron content-header">
                             <div class="container-fluid">
                                 <p>eMAG Apps UI KIT</p>
-                                <p><b>Layout</b></p>
+                                <p><b>CSS Components</b></p>
                             </div>
                         </div>
                         <section id="boilerplate" class="pad-top-40">
