Feature(Layout): Added page to UI KIT with helper classes

--- a/demo/helper_classes.html
+++ b/demo/helper_classes.html
@@ -260,7 +260,7 @@
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/helper_classes.html">
-                                <span class="menu-text">Helper classes</span>
+                                <span class="menu-text">Custom helper classes</span>
                             </a>
                         </li>
                     </ul>
@@ -464,7 +464,7 @@
                             <div class="panel">
                                 <div class="panel-body">
 
-                                    <h2><strong>Helper classes</strong></h2>
+                                    <h2><strong>Custom helper classes</strong></h2>
                                     <div class="row">
                                         <div class="col-sm-6 col-md-4">
                                             <p><strong>Margin</strong></p>
@@ -557,19 +557,6 @@
         <script type="text/javascript">
             $(document).ready(function () {
                 console.log('Ready, Captain!');
-
-                demoHelpers();  // Require demo_helpers.js
-
-                $('input[name="sidebar_fixed_status"], input[name="sidebar_expanded_status"]').on('change', function(event) {
-                    updateSideBarCode(event);
-                });
-                $('input[name="footer_fixed_status"]').on('change', function() {
-                    updateFooterBarCode();
-                });
-
-                showPageCode();
-
-               
             });
         </script>
         <!-- DOCUMENT-READY:End -->
