--- a/demo/plugin_ajax_modals.html
+++ b/demo/plugin_ajax_modals.html
@@ -256,7 +256,7 @@
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/helper_classes.html">
-                                <span class="menu-text">Helper classes</span>
+                                <span class="menu-text">Custom helper classes</span>
                             </a>
                         </li>
                     </ul>
