Feature(Layout): Added page to UI KIT with helper classes

--- a/demo/helper_classes.html
+++ b/demo/helper_classes.html
@@ -557,6 +557,8 @@
         <script type="text/javascript">
             $(document).ready(function () {
                 console.log('Ready, Captain!');
+                
+                demoHelpers();
             });
         </script>
         <!-- DOCUMENT-READY:End -->
