Feature(Layout): Added page to UI KIT with helper classes

--- a/demo/helper_classes.html
+++ b/demo/helper_classes.html
@@ -515,13 +515,13 @@
                                         <div class="col-sm-6 col-md-4">
                                             <p><strong>Width</strong></p>
                                             <ul>
-                                                <li>width-[10 ... 100]<br><small>(from 10 to 10, is procent)</small></li>
+                                                <li>width-[10 ... 100]<br><small>(from 10 to 10, is percentage)</small></li>
                                             </ul>
                                         </div>
                                         <div class="col-sm-6 col-md-4">
                                             <p><strong>Font</strong></p>
                                             <ul>
-                                                <li>font-size-[20 ... 200]<br><small>(from 20 to 20, is procent)</small></li>
+                                                <li>font-size-[20 ... 200]<br><small>(from 20 to 20, is percentage)</small></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -557,7 +557,7 @@
         <script type="text/javascript">
             $(document).ready(function () {
                 console.log('Ready, Captain!');
-                
+
                 demoHelpers();
             });
         </script>
