Feature(Layout): Demo for adding form

--- a/demo/blank_page.html
+++ b/demo/blank_page.html
@@ -431,6 +431,11 @@
                             </ul>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/add_form_example.html">
+                                <span class="menu-text">Add form example</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/blank_page.html">
                                 <span class="menu-text">Blank page</span>
                             </a>
@@ -465,6 +470,11 @@
         </div>
     </div>
 </div>        <!-- FOOTER:End -->
+
+        <!-- POPUPS:Start -->
+        <div id="popSpace"></div>
+        <!-- POPUPS:End -->
+
     </div>
 </div>
 <!-- PAGE:End -->
