--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -293,18 +293,18 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryAutocomplete">
-                                        <span class="menu-text">jQuery autocomplete</span>
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUIAutocomplete">
+                                        <span class="menu-text">jQuery UI autocomplete</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUISliders">
-                                        <span class="menu-text">jQuery UI Sliders</span>
+                                        <span class="menu-text">jQuery UI sliders</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryNumericInput">
-                                        <span class="menu-text">jQuery numeric input</span>
+                                        <span class="menu-text">jQuery UI numeric input (Spinner)</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
@@ -375,8 +375,8 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-error-messages">
-                                <span class="menu-text">Custom error messages</span>
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-notifications">
+                                <span class="menu-text">Custom notifications (Growl)</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -404,15 +404,9 @@
                                 <span class="menu-text">Block UI</span>
                             </a>
                         </li>
-
-
-
-
-
-
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/plugin_datetime.html">
-                                <span class="menu-text">DateTime</span>
+                                <span class="menu-text">Date & Time</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -780,7 +774,7 @@
                             <div class="code-container">
                                 <div class="row code-header no-border-top">
                                     <div class="col-xs-8 module-description">
-                                        <h4><b>Style 1</b></h4>
+                                        <h4><strong>Style 1</strong></h4>
                                     </div>
                                     <div class="col-xs-4">
                                         <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#file-upload-demo-1" aria-expanded="false" aria-controls="file-upload-demo-1"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
@@ -814,7 +808,7 @@
                                             <div class="form-group">
                                                 <label for="testfile" class="btn btn-primary">
                                                     <i class="fa fa-upload"></i>
-                                                    <span>Choose a file</span>
+                                                    <span>Choose a file to upload</span>
                                                     <input type="file" name="testfile" id="testfile" class="form-input-control" data-multiple-caption="{count} files selected" multiple/>
                                                 </label>
                                             </div>
@@ -859,8 +853,7 @@
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery">
                                             <div class="form-group">
                                                 <label for="testfile2" class="btn btn-link">
-                                                    <i class="fa fa-upload"></i>
-                                                    <span>Another one</span>
+                                                    <i class="fa fa-upload"></i><span>Choose a file to upload</span>
                                                     <input type="file" name="testfile2" id="testfile2" class="form-input-control" data-multiple-caption="{count} files selected" multiple/>
                                                 </label>
                                             </div>
@@ -905,14 +898,14 @@
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery">
                                             <div class="form-group">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control" aria-label="..." placeholder="Tell me your fathers name">
+                                                    <input type="text" class="form-control" aria-label="..." placeholder="Add the product name">
                                                     <div class="input-group-btn">
                                                         <label for="testfile3" class="btn btn-default">
                                                             <i class="fa fa-upload"></i>
-                                                            <span>Upload his picture</span>
+                                                            <span>Choose a file</span>
                                                             <input type="file" name="testfile3" id="testfile3" class="form-input-control" data-multiple-caption="{count} files selected" multiple/>
                                                         </label>
-                                                        <button class="btn btn-default" type="button">Go!</button>
+                                                        <button class="btn btn-default" type="button">Upload</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -987,10 +980,10 @@
                     </div>
                 </section>
 
-                <section id="jsJQueryAutocomplete" class="pad-top-30">
+                <section id="jsJQueryUIAutocomplete" class="pad-top-30">
                     <div class="show-panel code-example">
                         <div class="show-panel-body code-example">
-                            <h2><strong>jQuery autocomplete</strong></h2>
+                            <h2><strong>jQuery UI autocomplete</strong></h2>
 
                             <div class="row">
                                 <div class="col-sm-12 mg-top-20">
@@ -1051,7 +1044,7 @@
                 <section id="jsJQueryUISliders" class="pad-top-30">
                     <div class="show-panel code-example">
                         <div class="show-panel-body code-example">
-                            <h2><strong>jQuery UI Sliders</strong></h2>
+                            <h2><strong>jQuery UI sliders</strong></h2>
 
                             <div class="row">
                                 <div class="col-sm-12 mg-top-20">
