--- a/demo/index.html
+++ b/demo/index.html
@@ -291,18 +291,18 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryAutocomplete">
-                                        <span class="menu-text">jQuery autocomplete</span>
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUIAutocomplete">
+                                        <span class="menu-text">jQuery UI autocomplete</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUISliders">
-                                        <span class="menu-text">jQuery UI Sliders</span>
+                                        <span class="menu-text">jQuery UI sliders</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryNumericInput">
-                                        <span class="menu-text">jQuery numeric input</span>
+                                        <span class="menu-text">jQuery UI numeric input (Spinner)</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
@@ -373,8 +373,8 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-error-messages">
-                                <span class="menu-text">Custom error messages</span>
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-notifications">
+                                <span class="menu-text">Custom notifications (Growl)</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -402,15 +402,9 @@
                                 <span class="menu-text">Block UI</span>
                             </a>
                         </li>
-
-
-
-
-
-
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/plugin_datetime.html">
-                                <span class="menu-text">DateTime</span>
+                                <span class="menu-text">Date & Time</span>
                             </a>
                         </li>
                         <li class="menu-item">
