--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -294,18 +294,18 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
-                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryAutocomplete">
-                                        <span class="menu-text">jQuery autocomplete</span>
+                                    <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUIAutocomplete">
+                                        <span class="menu-text">jQuery UI autocomplete</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryUISliders">
-                                        <span class="menu-text">jQuery UI Sliders</span>
+                                        <span class="menu-text">jQuery UI sliders</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html#jsJQueryNumericInput">
-                                        <span class="menu-text">jQuery numeric input</span>
+                                        <span class="menu-text">jQuery UI numeric input (Spinner)</span>
                                     </a>
                                 </li>
                                 <li class="menu-item">
@@ -376,8 +376,8 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-error-messages">
-                                <span class="menu-text">Custom error messages</span>
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-notifications">
+                                <span class="menu-text">Custom notifications (Growl)</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -405,15 +405,9 @@
                                 <span class="menu-text">Block UI</span>
                             </a>
                         </li>
-
-
-
-
-
-
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/plugin_datetime.html">
-                                <span class="menu-text">DateTime</span>
+                                <span class="menu-text">Date & Time</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -601,8 +595,7 @@
                                                     <div class="modal-footer">
                                                         <div class="pull-left">
                                                             <div class="form-sep">
-                                                            <span
-                                                                class="required">Some fields may be required.</span>
+                                                                <span class="required">Required field</span>
                                                             </div>
                                                         </div>
                                                         <div class="pull-right panel-controls">
@@ -649,7 +642,7 @@
                                 </div>
 
                                 <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,ajax_modal_init,jquery">
-                                    <button id="ajax_modal_start" type="button" class="btn btn-primary">Show me an ajax modal.</button>
+                                    <button id="ajax_modal_start" type="button" class="btn btn-primary">Show me an ajax modal</button>
                                 </div>
                             </div>
 
@@ -687,17 +680,9 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,modals_different_size_init,modal_in_page">
-                                            <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                                                <div class="btn-group" role="group">
-                                                    <button type="button" id="mySmallDemoModal" class="btn btn-default" data-toggle="modal" data-target="#myDemoModal">Small</button>
-                                                </div>
-                                                <div class="btn-group" role="group">
-                                                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myDemoModal">Normal</button>
-                                                </div>
-                                                <div class="btn-group" role="group">
-                                                    <button type="button" id="myLargeDemoModal" class="btn btn-default" data-toggle="modal" data-target="#myDemoModal">Large</button>
-                                                </div>
-                                            </div>
+                                            <button type="button" id="mySmallDemoModal" class="btn btn-default" data-toggle="modal" data-target="#myDemoModal">Small</button>
+                                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myDemoModal">Normal</button>
+                                            <button type="button" id="myLargeDemoModal" class="btn btn-default" data-toggle="modal" data-target="#myDemoModal">Large</button>
                                         </div>
                                     </div>
                                 </div>
@@ -706,7 +691,7 @@
                             <div class="code-container">
                                 <div class="row code-header no-border-top">
                                     <div class="col-xs-8 module-description">
-                                        <h4><b>Alerts modals</b></h4>
+                                        <h4><b>Alert modals</b></h4>
                                     </div>
                                     <div class="col-xs-4">
                                         <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#alerts-modals" aria-expanded="false" aria-controls="alerts-modals"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
@@ -737,20 +722,10 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,alerts_modals_init">
-                                            <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                                                <div class="btn-group" role="group">
-                                                    <button type="button" id="confirmation_alert" class="btn btn-default">Confirmation</button>
-                                                </div>
-                                                <div class="btn-group" role="group">
-                                                    <button type="button" id="confirmation_alert_no_overlay" class="btn btn-default">Confirmation - No overlay</button>
-                                                </div>
-                                                <div class="btn-group" role="group">
-                                                    <button type="button" id="error_alert" class="btn btn-default">Error</button>
-                                                </div>
-                                                <div class="btn-group" role="group">
-                                                    <button type="button" id="error_alert_no_overlay" class="btn btn-default">Error - No overlay</button>
-                                                </div>
-                                            </div>
+                                            <button type="button" id="confirmation_alert" class="btn btn-default">Confirmation</button>
+                                            <button type="button" id="confirmation_alert_no_overlay" class="btn btn-default">Confirmation - No overlay</button>
+                                            <button type="button" id="error_alert" class="btn btn-default">Error</button>
+                                            <button type="button" id="error_alert_no_overlay" class="btn btn-default">Error - No overlay</button>
                                         </div>
                                     </div>
                                 </div>
@@ -760,10 +735,10 @@
                     </div>
                 </section>
 
-                <section id="js-custom-error-messages" class="pad-top-30">
+                <section id="js-custom-notifications" class="pad-top-30">
                     <div class="show-panel code-example">
                         <div class="show-panel-body code-example">
-                            <h2><strong>Custom error messages</strong></h2>
+                            <h2><strong>Custom notifications (Growl)</strong></h2>
                             <div class="row">
                                 <div class="col-sm-12 mg-top-20">
                                     <div class="alert alert-info no-margin-bottom" role="alert">
@@ -774,7 +749,7 @@
                             <div class="code-container">
                                 <div class="row code-header no-border-top">
                                     <div class="col-xs-8 module-description">
-                                        <h4><b>Messages types</b></h4>
+                                        <h4><b>Notification types</b></h4>
                                     </div>
                                     <div class="col-xs-4">
                                         <button class="btn btn-default btn-sm pull-right btn-source collapsed"  data-toggle="collapse" href="#messages-types" aria-expanded="false" aria-controls="messages-types"><i class="fa fa-chevron-left"></i><i class="fa fa-chevron-right"></i><span>CODE</span></button>
