--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -716,6 +716,7 @@
             styleUI : 'fontAwesome',
             useCustomColumnChooser: true,
             columnChooserOptions: {
+                selectAllCheckboxLabel: 'Select all',
                 saveBtnLabel: 'Done',
                 cancelBtnLabel: 'Cancel',
                 actionButton: '#grid_table_column_chooser_button'
