--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -614,13 +614,12 @@
         </div>
     </div>
 </div>        <!-- FOOTER:End -->
-
-        <!-- POPUPS:Start -->
-        <div id="popSpace"></div>
-        <!-- POPUPS:End -->
-
     </div>
 </div>
+
+<!-- POPUPS:Start -->
+<div id="popSpace"></div>
+<!-- POPUPS:End -->
     
         <!-- SCRIPTS:Start -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -878,7 +877,7 @@
                     searchPlaceholder: 'Search'
                 });
 
-                TreeTypeObject = $("#id_category_tree_disabled").TreeType({
+                TreeTypeObjectDisabled = $("#id_category_tree_disabled").TreeType({
                     treeData: fancytreeContent,
                     selectId: "category_tree_disabled",
                     modalTitle: 'Select',
