Feature(HierarchicalSelect): Add the HierarchicalSelect plugin to UI KIT

--- a/demo/plugin_gallery.html
+++ b/demo/plugin_gallery.html
@@ -344,6 +344,11 @@
                             </a>
                         </li>
                         <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/plugin_hierarchicalselect.html">
+                                <span class="menu-text">Hierarchical select</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/plugin_introjs.html">
                                 <span class="menu-text">IntroJS</span>
                             </a>
