--- a/demo/plugin_hierarchicalselect.html
+++ b/demo/plugin_hierarchicalselect.html
@@ -2,7 +2,7 @@
 <html lang="en" class="js">
 <head>
 
-    <title>Blank page - eMAG Apps UI KIT</title>
+    <title>JS Components - eMAG Apps UI KIT</title>
     <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="description" content="eMAG Apps UI KIT - The superfast, supersimple UI Kit" />
@@ -10,7 +10,9 @@
 <meta name="author" content="eMAG HX Team">
 
 <link rel="apple-touch-icon" href="../apple-touch-icon.png">
-<link rel="icon" type="image/png" href="../favicon.png">    <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
+<link rel="icon" type="image/png" href="../favicon.png">    <link rel="stylesheet" href="../dist/plugins/css3spinners/css3-spinners.1.2.2.min.css">
+    <link rel="stylesheet" href="../dist/plugins/hierarchicalselect/hierarchicalselect.min.css">
+    <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
 <link rel="stylesheet" href="../dist/plugins/prism/prism.min.css">
 
 <!-- PHOTON main styles -->
@@ -461,9 +463,33 @@
         <!-- CONTENT:Start -->
         <div class="main-content">
             <div class="page-content">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sed vestibulum lacus, a gravida libero. Aenean hendrerit non enim id pretium. Donec tincidunt quam sit amet nisi semper sodales. Phasellus in libero felis. Nunc eget mauris mi. Suspendisse risus nisi, lobortis ac odio a, facilisis mollis arcu. Proin dignissim mauris ut velit gravida, id sagittis libero consectetur. Donec in vestibulum orci. Donec pulvinar neque vitae enim elementum dignissim. Aenean volutpat iaculis ante a commodo. Donec eleifend ante nibh, a consequat purus ornare ut. Praesent justo nulla, iaculis id vestibulum eget, varius placerat dolor.
-                </p>
+                <div class="jumbotron content-header">
+                    <div class="container-fluid">
+                        <p>eMAG Apps UI KIT</p>
+                        <p><b>Hierarchical select</b></p>
+                    </div>
+                </div>
+                <section class="pad-top-40">
+                    <div class="show-panel">
+                        <div class="show-panel-body">
+                            <h4 class="text-primary"><strong>Hierarchical select</strong></h4>
+
+                            <div class="form-group">
+                                <label for="hierarchical_select">Categories</label>
+                                <div class="hide-with-opacity">
+                                    <select id="hierarchical_select" name="hierarchical_select"></select>
+                                </div>
+                                <div class="row hierarchical-container">
+                                    <div class="col-sm-12">
+                                        <div id="id_hierarchical_select"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed ante non felis accumsan egestas eu sed libero. Etiam finibus arcu id mollis tincidunt. Proin nec ultrices est. Donec porta luctus arcu, ac blandit augue ultricies ac. Maecenas quis dictum libero. Vivamus euismod non ligula sed euismod. Donec porta, ante in porta hendrerit, sapien ipsum tristique elit, sit amet condimentum nisl lectus in tortor. Fusce at mi a augue pellentesque posuere. Sed quis arcu mattis, efficitur libero imperdiet, gravida nibh. Aenean vitae condimentum nisl. Vestibulum elementum laoreet hendrerit. Etiam vehicula sodales quam, ac convallis ligula porttitor scelerisque. Pellentesque elit ex, eleifend quis tincidunt eget, vestibulum eu dui. Ut pulvinar iaculis porta. Quisque at auctor lectus.</p>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
         <!-- CONTENT:End -->
@@ -486,7 +512,9 @@
 <!-- SCRIPTS:Start -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>window.jQuery || document.write("<script src=\"../dist/js/lib/jquery-1.11.3.min.js\">"+"<"+"/script>")</script>
+<script src="../dist/js/lib/jquery-ui.1.11.4.min.js"></script>
 <script src="../dist/js/main_script.min.js"></script>
+<script src="../dist/plugins/hierarchicalselect/hierarchicalselect.min.js"></script>
 <script src="../dist/js/demo_helpers.js"></script>
 <!-- SCRIPTS:End -->
 
@@ -496,6 +524,20 @@
         console.log('Ready, Captain!');
 
         demoHelpers();  // Require demo_helpers.js
+
+        $('#id_hierarchical_select').HierarchicalSelect({
+            data: {
+                0: [
+                    {'key':1512,	'title':'AC',	                        'folder':true,	'selected':false},
+                    {'key':2097,	'title':'AC Others',	                'folder':true,	'selected':false},
+                    {'key':1453,	'title':'Auto Parts',	                'folder':true,	'selected':false},
+                    {'key':1517,	'title':'AV & HiFi',	                'folder':true,	'selected':false},
+                    {'key':357,	    'title':'Beauty',	                    'folder':true,	'selected':false}
+                ]
+            },
+            select: '#hierarchical_select',
+            ajaxRoute: 'http://iv1.photon-power.local/emag-apps-ui-kit/demo/hierarchicalselect_api.html'
+        });
     });
 </script>
 <!-- DOCUMENT-READY:End -->
