--- a/demo/plugin_introjs.html
+++ b/demo/plugin_introjs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="js">
 <head>
-    <title>Plugins - eMAG Apps UI KIT</title>
+    <title>JS Components - eMAG Apps UI KIT</title>
     <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="description" content="eMAG Apps UI KIT - The superfast, supersimple UI Kit" />
@@ -341,6 +341,11 @@
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/plugin_fancytree.html">
                                 <span class="menu-text">Fancytree</span>
+                            </a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/plugin_hierarchicalselect.html">
+                                <span class="menu-text">Hierarchical select</span>
                             </a>
                         </li>
                         <li class="menu-item">
