Feature(HierarchicalSelect): Add the HierarchicalSelect plugin to UI KIT

--- a/demo/plugin_hierarchicalselect.html
+++ b/demo/plugin_hierarchicalselect.html
@@ -536,7 +536,7 @@
                 ]
             },
             select: '#hierarchical_select',
-            ajaxRoute: 'http://iv1.photon-power.local/emag-apps-ui-kit/demo/hierarchicalselect_api.html'
+            ajaxRoute: '/emag-apps-ui-kit/demo/hierarchicalselect_api.html'
         });
     });
 </script>
