--- a/demo/plugin_ajax_modals.html
+++ b/demo/plugin_ajax_modals.html
@@ -444,6 +444,11 @@
                                 <span class="menu-text">Blank page</span>
                             </a>
                         </li>
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/email_template.html">
+                                <span class="menu-text">Email template</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
