Added code section for all pages

--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -657,7 +657,7 @@
 
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,masked_serial_number,masked_input_source">
+                                        <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,masked_serial_number,masked_input_source,masked_serial_number_init">
                                             <div class="form-group">
                                                 <label for="serial_example"></label>
                                                 <input type="text" class="form-control" name="serial_example" id="serial_example">
